# tagged

./: .gitignore  .travis.yml  CHANGELOG.markdown  Data-Proxy-TH.html  Data-Proxy.html  Data-Tagged.html  HLint.hs  LICENSE  README  README.markdown  cabal.haskell-ci  doc-index.html  index-frames.html  index.html  mini_Data-Proxy.html  mini_Data-Tagged.html  stack.yaml  tagged.cabal  tagged.haddock
.github/workflows/: haskell-ci.yml
Data/: Proxy.hs  Tagged.hs
old/Data/: Proxy.hs
src/: Data-Proxy-TH.html  Data-Proxy.html  Data-Tagged.html
src/Data/: Tagged.hs
src/Data/Proxy/: TH.hs
src/Data/Tagged/: Foreign.hs
