name:           tagged
version:        0.5
license:        BSD3
license-file:   LICENSE
author:         Edward A. Kmett
maintainer:     Edward A. Kmett <ekmett@gmail.com>
stability:      experimental
category:       Data, Phantom Types
synopsis:       Haskell 98 phantom types to avoid unsafely passing dummy arguments
homepage:       http://github.com/ekmett/tagged
bug-reports:    http://github.com/ekmett/tagged/issues
copyright:      2009-2013 Edward A. Kmett
description:    Haskell 98 phantom types to avoid unsafely passing dummy arguments
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files: .travis.yml CHANGELOG.markdown README.markdown

source-repository head
  type: git
  location: git://github.com/ekmett/tagged.git

library
  default-language: Haskell98
  other-extensions: CPP
  if !impl(hugs)
    cpp-options: -DLANGUAGE_DeriveDataTypeable
    other-extensions: DeriveDataTypeable
  build-depends:
    base >= 2 && < 5
  exposed-modules:
    Data.Tagged
    Data.Proxy
  ghc-options: -Wall
